force-app/main/default/objects/Account/fields/Beta_Features__c.field-meta.xml
<CustomField>
    <fullName>Beta_Features__c</fullName>
    <label>Beta Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Notifications</fullName>
            </value>
            <value>
                <fullName>Custom Dashboards</fullName>
            </value>
            <value>
                <fullName>MW Referrals</fullName>
            </value>
            <value>
                <fullName>Beta-PO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>