force-app/main/default/objects/Account/fields/Biannual_Account_Review_Verified__c.field-meta.xml
<CustomField>
    <fullName>Biannual_Account_Review_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-4519</description>
    <label>Biannual Account Review - Verified</label>
    <type>Checkbox</type>
</CustomField>