force-app/main/default/objects/Account/fields/Biannual_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Biannual_Assessment__c</fullName>
    <description>MIS-4519</description>
    <label>Biannual account review date</label>
    <type>Date</type>
</CustomField>