force-app/main/default/objects/Account/fields/Bill_to_Account_Balance_Summary__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Account_Balance_Summary__c</fullName>
    <description>MIS-3828 - Rolls up and summarizes all billing account&apos;s balance</description>
    <label>Bill to Account - Balance Summary</label>
    <summarizedField>Zuora__CustomerAccount__c.Zuora__Balance__c</summarizedField>
    <summaryForeignKey>Zuora__CustomerAccount__c.Zuora__Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>