force-app/main/default/objects/Account/fields/Billing_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Billing_Accounts__c</fullName>
    <label># Billing Accounts</label>
    <summaryForeignKey>Zuora__CustomerAccount__c.Zuora__Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>