force-app/main/default/objects/Account/fields/Billing_expert__c.field-meta.xml
<CustomField>
    <fullName>Billing_expert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>