force-app/main/default/objects/Account/fields/Billing_Expert_Changed__c.field-meta.xml
<CustomField>
    <fullName>Billing_Expert_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by the BillingExpertBatch and YayPaySetARSpecialistBatch to flag records with changed Billing_expert__c</description>
    <label>Billing Expert Changed</label>
    <type>Checkbox</type>
</CustomField>