force-app/main/default/objects/Account/fields/Billing_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Name__c</fullName>
    <description>Created for KYC process - populated with Billing Account name once account is set as &apos;Paying Account&apos;</description>
    <label>Billing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>