force-app/main/default/objects/Account/fields/BillingCompanyName__c.field-meta.xml
<CustomField>
    <fullName>BillingCompanyName__c</fullName>
    <label>Billing Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>