force-app/main/default/objects/Account/fields/BU_was_Changed_After_Insertion__c.field-meta.xml
<CustomField>
    <fullName>BU_was_Changed_After_Insertion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BU was Changed After Insertion</label>
    <type>Checkbox</type>
</CustomField>