force-app/main/default/objects/Account/fields/Budget_Cycle_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Budget_Cycle_Start_Month__c</fullName>
    <description>Description: ‘#1099100 Updated by SMs manually’</description>
    <label>Budget Cycle - Start Month</label>
    <type>Date</type>
</CustomField>