force-app/main/default/objects/Account/fields/BudgetMax_registration__c.field-meta.xml
<CustomField>
    <fullName>BudgetMax_registration__c</fullName>
    <label>Budget Max (registration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>