force-app/main/default/objects/Account/fields/Business_and_Revenue_Model_Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Business_and_Revenue_Model_Other_Details__c</fullName>
    <label>Business and Revenue Model Other Details</label>
    <type>TextArea</type>
</CustomField>