force-app/main/default/objects/Account/fields/Business_Summary_Completion__c.field-meta.xml
<CustomField>
    <fullName>Business_Summary_Completion__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Business Summary Completion %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>