force-app/main/default/objects/Account/fields/Business_Summary_Completion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Business_Summary_Completion_Rate__c</fullName>
    <formula>IF(Business_Summary_Completion__c *200&lt;150, 
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, Business_Summary_Completion__c *200 ) &amp;LEFT(TEXT(Business_Summary_Completion__c *100),5)+&quot;%&quot;, 

IF(Business_Summary_Completion__c *200 &lt;200, 
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 15,Business_Summary_Completion__c *200 ) &amp;LEFT(TEXT(Business_Summary_Completion__c *100),5)+&quot;%&quot;, 

IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, Business_Summary_Completion__c *200 )&amp;LEFT(TEXT(Business_Summary_Completion__c *100),5)+&quot;%&quot;))</formula>
    <label>Business Summary Completion Rate</label>
    <type>Text</type>
</CustomField>