force-app/main/default/objects/Account/fields/CARR__c.field-meta.xml
<CustomField>
    <fullName>CARR__c</fullName>
    <description>MIS-1391</description>
    <formula>BI_Data__r.CARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>