force-app/main/default/objects/Account/fields/CLC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CLC_Start_Date__c</fullName>
    <label>CLC Start Date</label>
    <type>Date</type>
</CustomField>