force-app/main/default/objects/Account/fields/Clean_Domain__c.field-meta.xml
<CustomField>
    <fullName>Clean_Domain__c</fullName>
    <formula>IF(AND(
       ISPICKVAL(Email_address_domain_type_SFDC__c, &apos;Company&apos;),
       NOT(ISBLANK(Email_Domain__c))),
                                      Email_Domain__c,Website_Domain__c)</formula>
    <label>Clean Domain</label>
    <type>Text</type>
</CustomField>