force-app/main/default/objects/Account/fields/Client_Partner__c.field-meta.xml
<CustomField>
    <fullName>Client_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MIS-7584</description>
    <label>Client Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Partner_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>