force-app/main/default/objects/Account/fields/Clients_Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Clients_Support_Level__c</fullName>
    <inlineHelpText>What level of support does the Client receive?</inlineHelpText>
    <label>Clients Support Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>