force-app/main/default/objects/Account/fields/Code_Red_Flag__c.field-meta.xml
<CustomField>
    <fullName>Code_Red_Flag__c</fullName>
    <formula>IF(  SYSCodeRedFlag__c = &quot;Red&quot;,IMAGE( &quot;/servlet/servlet.FileDownload?file=015b0000004a1JY&quot;, &quot;RedFlag&quot;), 
IF(  SYSCodeRedFlag__c = &quot;Blue&quot;,IMAGE( &quot;/servlet/servlet.FileDownload?file=015b0000004a1Jd&quot;, &quot;BlueFlag&quot;), 
IF(  SYSCodeRedFlag__c = &quot;Gray&quot;,IMAGE( &quot;/servlet/servlet.FileDownload?file=015b0000004a1Jx&quot;, &quot;GrayFlag&quot;), 
IF(  SYSCodeRedFlag__c = &quot;Amber&quot;,IMAGE( &quot;/servlet/servlet.FileDownload?file=015b0000004a1Jn&quot;, &quot;YellowFlag&quot;), 
&quot;&quot;))))</formula>
    <label>Code Red Flag</label>
    <type>Text</type>
</CustomField>