force-app/main/default/objects/Account/fields/CodeFutureDelete__c.field-meta.xml
<CustomField>
    <fullName>CodeFutureDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by code to handle MERGE</description>
    <label>CodeFutureDelete</label>
    <type>Checkbox</type>
</CustomField>