force-app/main/default/objects/Account/fields/Collection_Status_Debooked_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Collection_Status_Debooked_Timestamp__c</fullName>
    <description>MIS-5156</description>
    <label>Collection Status - Debooked Timestamp</label>
    <type>DateTime</type>
</CustomField>