force-app/main/default/objects/Account/fields/Collection_Status_Overdue_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Collection_Status_Overdue_Timestamp__c</fullName>
    <description>MIS-5165</description>
    <label>Collection Status - Overdue Timestamp</label>
    <type>DateTime</type>
</CustomField>