force-app/main/default/objects/Account/fields/Commercial_Goals__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Goals__c</fullName>
    <description>MIS-4810</description>
    <label>Commercial Goals</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Upsell</fullName>
            </value>
            <value>
                <fullName>Multiyear</fullName>
            </value>
            <value>
                <fullName>Multiyear + Data Upsell</fullName>
            </value>
            <value>
                <fullName>Multiyear + Soft upsells</fullName>
            </value>
            <value>
                <fullName>Multiyear + Soft upsells + Cross Sells</fullName>
            </value>
            <value>
                <fullName>Multiyear + Soft upsells + Cross Sells + MS</fullName>
            </value>
            <value>
                <fullName>Multiyear + Soft upsells + Cross Sells + MS + AS</fullName>
            </value>
            <value>
                <fullName>Multiyear + Soft upsells + MS</fullName>
            </value>
            <value>
                <fullName>Soft upsells</fullName>
            </value>
            <value>
                <fullName>Soft upsells + Cross Sells</fullName>
            </value>
            <value>
                <fullName>Soft upsells + Cross Sells + MS</fullName>
            </value>
            <value>
                <fullName>Soft upsells + Cross Sells + MS + AS</fullName>
            </value>
            <value>
                <fullName>Soft upsells + MS</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>