force-app/main/default/objects/Account/fields/Commercial_Level__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Level__c</fullName>
    <description>MIS-4810</description>
    <label>Commercial Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4 - Inside Sales AM</fullName>
            </value>
            <value>
                <fullName>3 - Senior Inside Sales AM</fullName>
            </value>
            <value>
                <fullName>2 - Enterprise AM</fullName>
            </value>
            <value>
                <fullName>1 - Senior Enterprise AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>