force-app/main/default/objects/Account/fields/Communication_Profile__c.field-meta.xml
<CustomField>
    <fullName>Communication_Profile__c</fullName>
    <label>Communication Profile</label>
    <length>150</length>
    <type>Text</type>
</CustomField>