force-app/main/default/objects/Account/fields/Company_Is_Selling_On_Amazon__c.field-meta.xml
<CustomField>
    <fullName>Company_Is_Selling_On_Amazon__c</fullName>
    <description>MIS-7440</description>
    <label>Company Is Selling On Amazon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>