force-app/main/default/objects/Account/fields/Company_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_2__c</fullName>
    <inlineHelpText>Company name as taken from the Company Qualification API</inlineHelpText>
    <label>Company Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>