force-app/main/default/objects/Account/fields/Company_Name_Original_Source_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Original_Source_Last_Update__c</fullName>
    <label>Company Name Original Source Last Update</label>
    <type>DateTime</type>
</CustomField>