force-app/main/default/objects/Account/fields/Company_Responsiveness__c.field-meta.xml
<CustomField>
    <fullName>Company_Responsiveness__c</fullName>
    <description>MIS-4519</description>
    <label>Company Responsiveness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not relevant</fullName>
            </value>
            <value>
                <fullName>Actively engaging</fullName>
            </value>
            <value>
                <fullName>They reach out when they need something</fullName>
            </value>
            <value>
                <fullName>Haven&apos;t responded to me for a while</fullName>
            </value>
            <value>
                <fullName>Client Has Us on Speed Dial</fullName>
            </value>
            <value>
                <fullName>Responds to All Requests</fullName>
            </value>
            <value>
                <fullName>Only Engages When Needs Help</fullName>
            </value>
            <value>
                <fullName>Does Not Reliably Respond / Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>