force-app/main/default/objects/Account/fields/Company_Size_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Company_Size_Confidence__c</fullName>
    <description>MIS-4422</description>
    <label>Company Size Confidence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>