force-app/main/default/objects/Account/fields/Country_Code_ISO3__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_ISO3__c</fullName>
    <description>updated from CMT - Country Picklist Values</description>
    <label>Country Code ISO3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>