force-app/main/default/objects/Account/fields/Country_Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Country_Subsidiary__c</fullName>
    <description>Populate from account after save flow , according to account country in CountrySubsidiary</description>
    <label>Country Subsidiary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>