force-app/main/default/objects/Account/fields/CP_Account_URL_Link__c.field-meta.xml
<CustomField>
    <fullName>CP_Account_URL_Link__c</fullName>
    <description>MIS-2388</description>
    <label>CP Account URL Link</label>
    <type>Url</type>
</CustomField>