force-app/main/default/objects/Account/fields/Credits_Score__c.field-meta.xml
<CustomField>
    <fullName>Credits_Score__c</fullName>
    <description>MIS-4723</description>
    <formula>BI_Data__r.Credits_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credits Score</label>
    <type>Text</type>
</CustomField>