force-app/main/default/objects/Account/fields/CSA_Engaged_Account__c.field-meta.xml
<CustomField>
    <fullName>CSA_Engaged_Account__c</fullName>
    <description>MIS-2021</description>
    <formula>BI_Data__r.CSA_Engaged_Account__c</formula>
    <label>CSA Engaged Account</label>
    <type>Checkbox</type>
</CustomField>