force-app/main/default/objects/Account/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MIC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$UserRole.Name</field>
            <operation>contains</operation>
            <value>MIC</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_MIC</relationshipName>
    <type>Lookup</type>
</CustomField>