force-app/main/default/objects/Account/fields/Current_FY_Growth_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_FY_Growth_Rate__c</fullName>
    <label>Current FY Growth Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>