force-app/main/default/objects/Account/fields/Current_FY_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_FY_Revenue__c</fullName>
    <label>Current FY Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>