force-app/main/default/objects/Account/fields/Current_Industry_Trends__c.field-meta.xml
<CustomField>
    <fullName>Current_Industry_Trends__c</fullName>
    <inlineHelpText>E.g. If the company is in the business of Telecom, how are increased mobile traffic going to affect their business and their need for SimilarWeb?</inlineHelpText>
    <label>Current Industry Trends</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>