force-app/main/default/objects/Account/fields/Customer_Lead_enrichment_renewal_date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lead_enrichment_renewal_date__c</fullName>
    <label>Customer&apos;s Lead enrichment renewal date</label>
    <type>Date</type>
</CustomField>