force-app/main/default/objects/Account/fields/Customer_s_CRM__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_CRM__c</fullName>
    <label>Customer&apos;s CRM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Hubspot</fullName>
            </value>
            <value>
                <fullName>Zoho</fullName>
            </value>
            <value>
                <fullName>Proprietary CRM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>inhouse</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics</fullName>
            </value>
            <value>
                <fullName>Copper</fullName>
            </value>
            <value>
                <fullName>Monday.com</fullName>
            </value>
            <value>
                <fullName>Pipedrive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>