force-app/main/default/objects/Account/fields/Customer_s_Lead_enrichment_provider__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Lead_enrichment_provider__c</fullName>
    <label>Customer&apos;s Lead enrichment provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZoomInfo</fullName>
            </value>
            <value>
                <fullName>BuiltWith</fullName>
            </value>
            <value>
                <fullName>Etail insights</fullName>
            </value>
            <value>
                <fullName>Red Volcano</fullName>
            </value>
            <value>
                <fullName>D&amp;B Hoovers</fullName>
            </value>
            <value>
                <fullName>Lusha</fullName>
            </value>
            <value>
                <fullName>Cognism</fullName>
            </value>
            <value>
                <fullName>Apollo.io</fullName>
            </value>
            <value>
                <fullName>RocketReach</fullName>
            </value>
            <value>
                <fullName>TAMI</fullName>
            </value>
            <value>
                <fullName>PipeCandy</fullName>
            </value>
            <value>
                <fullName>Crunchbase</fullName>
            </value>
            <value>
                <fullName>Clearbit</fullName>
            </value>
            <value>
                <fullName>Similarweb</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Demandbase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>