force-app/main/default/objects/Account/fields/Customer_s_Sales_Orchestration__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Sales_Orchestration__c</fullName>
    <label>Customer&apos;s Sales Orchestration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesloft</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>Yesware</fullName>
            </value>
            <value>
                <fullName>MixMax</fullName>
            </value>
            <value>
                <fullName>sales navigator</fullName>
            </value>
            <value>
                <fullName>HubSpot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>