force-app/main/default/objects/Account/fields/Customer_Sales_Intel_contacts_renewal__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sales_Intel_contacts_renewal__c</fullName>
    <label>Customer Sales Intel. / contacts renewal</label>
    <type>Date</type>
</CustomField>